completed integration testing, added BookingDetails dto, added global exception handler and solved checkstyle bugs