@@ -4,7 +4,6 @@ import com.akash.hotelbookingmanagement.dto.RoomDto;
 import com.akash.hotelbookingmanagement.model.Customer;
 import com.akash.hotelbookingmanagement.model.Room;
 import com.akash.hotelbookingmanagement.service.CustomerService;
-import com.akash.hotelbookingmanagement.service.RoomService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -19,27 +18,25 @@ public class RoomMapper {
     private final CustomerService customerService;
 
     @Autowired
-    public RoomMapper(ModelMapper modelMapper, CustomerService customerService) {
+    public RoomMapper(final ModelMapper modelMapper, final CustomerService customerService) {
         this.modelMapper = modelMapper;
         this.customerService = customerService;
     }
 
-    public Room convertToEntity(RoomDto roomDto) {
+    public Room convertToEntity(final RoomDto roomDto) {
         Room room = modelMapper.map(roomDto, Room.class);
-        System.out.println(roomDto.getCheckedInCustomerIdList());
 
         // Map room ids to Room entities
         if (roomDto.getCheckedInCustomerIdList() != null) {
-            System.out.println("hi");
             List<Customer> checkedInCustomers = roomDto.getCheckedInCustomerIdList().stream()
                     .map(customerService::getCustomerById)
-                    .collect(Collectors.toList());
+                    .toList();
             room.setCheckedInCustomers(checkedInCustomers);
         }
         return room;
     }
 
-    public RoomDto convertToDto(Room room) {
+    public RoomDto convertToDto(final Room room) {
         return modelMapper.map(room, RoomDto.class);
     }
 }
